Prevent overflow

--- a/frontend/src/metabase/metadata/pages/DataModel/components/TableSection/FieldList/FieldItem/FieldItem.module.css
+++ b/frontend/src/metabase/metadata/pages/DataModel/components/TableSection/FieldList/FieldItem/FieldItem.module.css
@@ -14,8 +14,13 @@
 }
 
 .input {
+  &,
+  & textarea {
+    height: 1.5rem !important;
+  }
+
   textarea {
     cursor: text;
-    line-height: normal;
+    white-space: nowrap;
   }
 }
